After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 319982 - The additional text info for files/directories does not theme
The additional text info for files/directories does not theme
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: Icon View
2.91.x
Other All
: High minor
: 3.0
Assigned To: Nautilus Maintainers
Nautilus Maintainers
AP3
Depends on:
Blocks:
 
 
Reported: 2005-10-27 14:10 UTC by dinoop.thomas
Modified: 2011-04-05 02:48 UTC
See Also:
GNOME target: ---
GNOME version: 2.91/3.0



Description dinoop.thomas 2005-10-27 14:10:52 UTC
The additional text (number of items in directory/size of file etc) for
files/directories in nautilus icon view does not respect the theme change.
Steps to simulate the problem:
1. Invoke nautilus (view as icons).
2. Make sure that the file/directory icons have additional text (one may have to
zoom to 150% and above)
3. Change the theme.
4. It can be seen that the text containing the file size is always blue in color.
Comment 1 Sebastien Bacher 2005-11-13 17:12:21 UTC
Thanks for your bug. What color change would you expect when changing the theme?
Comment 2 dinoop.thomas 2005-11-16 05:37:23 UTC
For 'HighContrastLargePrint', the text should appear as black on white 
while for 'HighContrastLargePrintInverse', the text should appear as white on black.
Comment 3 Christian Neumair 2005-11-16 17:29:10 UTC
Thanks, good catch. I wonder what color we should use for these. Any
suggestions, usability squad? Maybe an a11y CC would also be appropriate.
Comment 4 Calum Benson 2006-04-26 16:40:06 UTC
Apologies for spam-- marking AP3 to reflect accessibility impact.
Comment 5 Calum Benson 2006-04-26 17:14:34 UTC
Apologies for spam... ensuring Sun a11y folks are cc'ed on all current accessibility bugs.
Comment 6 Calum Benson 2006-06-15 17:31:15 UTC
base[SELECTED] would probably work best of the secondary colours for the a11y themes, but I haven't looked yet to see how that would look in the non-a11y themes.  (Obviously text[NORMAL] would work best of all from an a11y perspective, but I'm guessing we don't want to do that.)
Comment 7 Cosimo Cecchi 2011-03-31 18:48:27 UTC
Still a problem with 2.91.
Comment 8 Cosimo Cecchi 2011-04-05 02:48:20 UTC
I pushed this fix to master.

commit aaaee6de758f70005ffdd343a4b7354e3664f471
Author: Cosimo Cecchi <cosimoc@gnome.org>
Date:   Mon Apr 4 22:25:26 2011 -0400

    icon-container: rework the colors used for additional text labels
    
    We now use the insensitive color for the normal state, and make them
    follow the filename color for selected states.
    
    This also fixes https://bugzilla.gnome.org/show_bug.cgi?id=319982,
    tested with the HighContrast theme.