icon-container: rework the colors used for additional text labels

We now use the insensitive color for the normal state, and make them
follow the filename color for selected states.

This also fixes https://bugzilla.gnome.org/show_bug.cgi?id=319982,
tested with the HighContrast theme.